# fourtune-teller

./: .gitignore  Board.cpp  Board.h  BoardIterator.cpp  BoardIterator.h  Bot.cpp  Bot.h  BotParser.cpp  BotParser.h  CMakeLists.txt  LICENSE  Minimax.cpp  Minimax.h  MinimaxNode.cpp  MinimaxNode.h  README.md  main.cpp
src/: main.cpp
src/board/: Board.cpp  Board.h  BoardIterator.cpp  BoardIterator.h
src/bot/: Bot.cpp  Bot.h  Minimax.cpp  Minimax.h
src/utils/: Utils.cpp  Utils.h
